Fix overflow

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -88,7 +88,8 @@ strong {
   font-weight: 700;
 }
 
-html {
+html,
+body {
   overflow-x: hidden;
 }
 
