--- a/docs/scss/base/_global.scss
+++ b/docs/scss/base/_global.scss
@@ -1,5 +1,6 @@
 // LAYOUT LEVEL
-html {
+html,
+body {
   overflow-x: hidden;
 }
 .row + .row {
